style.css
/*Working on the best website ever!*/

body{
	background-color: #fff;
}

#first_thing{
	margin-top: 5%;
	display: flex;
	align-items: center;
	justify-content: center;
	align-content: center;
	flex-direction: column;
}

#title{
	display: flex;
	text-align: center;
	align-items: center;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	margin-top: 0%;
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
}

#paragraph{
	display: flex;
	text-align: center;
	align-items: center;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	margin-top: 0%;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
}

p{
	margin-top: none;
}
h1, h2,h3,h4{
	margin-bottom: 0px;
}

